# mini_tool

./: CMakeLists.txt  README.md
resources/: app.manifest  app.rc
src/: hardware.cpp  hardware.h  main.cpp  window.cpp  window.h
